--- a/css/style.css
+++ b/css/style.css
@@ -6,4 +6,66 @@
 
 body{
     font-family: sans-serif;
+    background-color: #f5f5f1;
 }
+
+main{
+    max-width: 1000px;
+    margin: 30px auto;
+}
+
+main header{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 40px 0;
+}
+
+main header .text{
+    max-width: 600px;
+}
+
+main header .text p{
+    line-height: 3.4ch;
+}
+
+main header h1{
+    padding-bottom: 20px;
+}
+
+main #container #our-team-list{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    gap: 30px;
+    width: 100%; 
+}
+
+main #container #our-team-list img{
+    width: 100%;
+    border-radius: 16px 16px 0 0;
+}
+
+main #container #our-team-list .card-team-member{
+    width: calc(100% / 3 - ( 30px / 3 * 2 ));
+    background-color: white;
+    border-radius: 16px;
+}
+
+main #container #our-team-list .card-team-member h3,
+main #container #our-team-list .card-team-member h5{
+    text-align: center;
+    padding: 2px;
+    color: rgb(97, 92, 84);
+}
+
+main #container #our-team-list .card-team-member h3{
+    padding-top: 20px;
+}
+
+main #container #our-team-list .card-team-member h5{
+    padding-bottom: 20px;
+}
+
+
